tests/semantic/invalid/duplicate_function.src
fn test() -> int {
    return 1;
}

fn test() -> int {
    return 2;
}
